# Sparq

./: .example_env  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
Backend/: main.py  test_reversal.py
app/: __init__.py  database.py  main.py  routes.py
app/auth/: dependencies.py  protected_route.py  routers.py  session.py  utils.py
app/chat/: manager.py  routers.py  schemas.py
app/config/: settings.py
app/database/: __init__.py  helper.py  repository.py
app/date/: models.py
app/events_queue/: events.py  events_queue.py
app/migration/: env.py
app/migration/versions/: 1aff6a2a4737_initial_revision.py
app/models/: __init__.py  base_model.py  test_model.py
app/templates/: chat.html
app/websockets/: routers.py
app/websockets/controllers/: controller_proccesser.py  handlers.py
app/ws_handlers/: __init__.py  handlers.py
migrations/: env.py
migrations/versions/: 37abd7b4f27a_users_table.py  f4853b5b26e5_create_test_table4.py
src/: __init__.py  database.py  main.py  routes.py
src/auth/: dependencies.py  models.py  protected_route.py  routers.py  session.py  utils.py
src/config/: settings.py
src/database/: helper.py  repository.py
src/date/: models.py
src/events_queue/: events.py  events_queue.py
src/migration/: env.py
src/migration/versions/: 61674ab579a5_first_migration.py  90912b289c05_add_timestamp_to_test_table.py  b74e808c7081_initial_revision.py
src/models/: base_model.py  test_model.py  user_model.py
src/websockets/: routers.py
src/websockets/controllers/: handlers.py
src/ws_handlers/: __init__.py  handlers.py
templates/: chat.html  login.html  protected.html  register.html
tests/: conftest.py  test_.py  test_database.py  test_new_user_login.py  test_user_routes.py
