[tool.poetry]
name = "sparq-messenger"
version = "0.1.0"
description = ""
authors = ["Sparq <saprq@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = "'"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pytest = "^8.3.3"
flake8 = "^7.1.1"
jinja2 = "^3.1.4"
black = "^24.8.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
